Add stub for pinging server on start

--- a/sci-apps-base/supervisor.conf
+++ b/sci-apps-base/supervisor.conf
@@ -4,3 +4,8 @@ pidfile = /var/run/supervisor.pid
 
 [include]
 files = /etc/supervisor.d/*.conf
+
+[program:ping]
+command = /usr/local/bin/ping.py
+autostart = true
+autorestart = false
