Direct outputs to log files

--- a/sci-apps-base/supervisor.conf
+++ b/sci-apps-base/supervisor.conf
@@ -7,5 +7,7 @@ files = /etc/supervisor.d/*.conf
 
 [program:ping]
 command = /usr/local/bin/ping.py
+stdout_logfile = /var/log/supervisor/ping_out.log
+stderr_logfile = /var/log/supervisor/ping_err.log
 autostart = true
 autorestart = false
