--- a/sci-apps-base/sshd.conf
+++ b/sci-apps-base/sshd.conf
@@ -1,4 +1,5 @@
 [program:sshd]
 command = /usr/sbin/sshd -D
-logfile = /var/log/supervisor/sshd.log
+stdout_logfile = /var/log/supervisor/sshd_out.log
+stderr_logfile = /var/log/supervisor/sshd_err.log
 autorestart = true
