Assume that ping always starts

--- a/sci-apps-base/supervisor.conf
+++ b/sci-apps-base/supervisor.conf
@@ -11,3 +11,4 @@ stdout_logfile = /var/log/supervisor/ping_out.log
 stderr_logfile = /var/log/supervisor/ping_err.log
 autostart = true
 autorestart = false
+startsecs = 0
