Restructure to install a python module

--- a/sci-apps-base/Dockerfile
+++ b/sci-apps-base/Dockerfile
@@ -6,19 +6,20 @@ MAINTAINER Walter Moreira <wmoreira@tacc.utexas.edu>
 
 ADD init.sh /usr/local/bin/init.sh
 ADD supervisor.conf /etc/supervisor.conf
-ADD intro.py /usr/local/bin/intro
-ADD ping.py /usr/local/bin/ping.py
-ADD metadata.yml /etc/metadata.yml
 
-RUN pip install PyYAML
+ADD python /tmp/python
+RUN pip install PyYAML requests
+RUN pip install /tmp/python/
+
 RUN chmod +x /usr/local/bin/init.sh \
              /usr/local/bin/intro \
              /usr/local/bin/ping.py
-RUN mkdir /var/log/supervisor
 
+RUN mkdir /var/log/supervisor
 RUN mkdir /etc/supervisor.d
 ADD sshd.conf /etc/supervisor.d/sshd.conf
 
+ADD metadata.yml /etc/metadata.yml
 RUN mkdir /etc/metadata.d
 
 CMD ["/usr/local/bin/intro"]
