--- a/sci-apps-base/supervisor.conf
+++ b/sci-apps-base/supervisor.conf
@@ -6,7 +6,7 @@ pidfile = /var/run/supervisor.pid
 files = /etc/supervisor.d/*.conf
 
 [program:ping]
-command = /usr/local/bin/ping.py
+command = ping.py
 stdout_logfile = /var/log/supervisor/ping_out.log
 stderr_logfile = /var/log/supervisor/ping_err.log
 autostart = true
