Use environment variable to disable ping

--- a/my-sci-app/Dockerfile
+++ b/my-sci-app/Dockerfile
@@ -1,5 +1,6 @@
 FROM sci-apps-base
 
-RUN touch /etc/NO_PING
+ENV DEVELOPER Walter
+ENV NO_PING 1
 
 ADD my-daemon.conf /etc/supervisor.d/my-daemon.conf
