Change prefix of metadata variables

--- a/my-sci-app/Dockerfile
+++ b/my-sci-app/Dockerfile
@@ -1,6 +1,7 @@
 FROM sci-apps-base
 
-ENV DEVELOPER Walter
+ENV _DEVELOPER Walter
+
 ENV NO_PING 1
 
 ADD my-daemon.conf /etc/supervisor.d/my-daemon.conf
