Improve example of derived app

--- a/my-sci-app/Dockerfile
+++ b/my-sci-app/Dockerfile
@@ -1,7 +1,10 @@
 FROM sci-apps-base
 
-ENV _DEVELOPER Walter
+ENV _DEVELOPER Walter Moreira
 
 ENV NO_PING 1
 
 ADD my-daemon.conf /etc/supervisor.d/my-daemon.conf
+
+ADD intro.txt /docs/my/intro.txt
+ADD examples.txt /docs/my/examples.txt
