Install blessings for color output

--- a/sci-apps-base/Dockerfile
+++ b/sci-apps-base/Dockerfile
@@ -19,7 +19,7 @@ ADD init.sh /usr/local/bin/init.sh
 ADD supervisor.conf /etc/supervisor.conf
 
 ADD python /tmp/python
-RUN pip install PyYAML requests
+RUN pip install PyYAML requests blessings
 RUN pip install /tmp/python/
 
 RUN chmod +x /usr/local/bin/init.sh
